<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap"
            app:contentScrim="@color/purple_500"
            app:toolbarId="@id/toolbar">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:src="@drawable/image"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/photo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="right"
                android:paddingRight="16dp"
                android:text="@string/online_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_collapseMode="pin"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:text="@string/name_text"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:visibility="gone"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>



        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ach_const"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/work_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/work_text"
                    android:textColor="#999"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/work_age_text"
                    android:textColor="#999"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/position_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/position_text"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/work_text" />

                <TextView
                    android:id="@+id/about_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/about_text"
                    android:textSize="12sp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/position_text" />

                <TextView
                    android:id="@+id/achievements_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="12dp"
                    android:text="@string/achievements_text"
                    android:textColor="#000"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/about_text"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/project_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:background="#FFF"
                    android:src="@drawable/project_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/achievements_text"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/rock_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:background="#FFF"
                    android:src="@drawable/rock_image"
                    app:layout_constraintLeft_toRightOf="@+id/project_image"
                    app:layout_constraintTop_toBottomOf="@id/achievements_text"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/hand_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="#FFF"
                    android:src="@drawable/hand_image"
                    app:layout_constraintBottom_toTopOf="@+id/contact_text"
                    app:layout_constraintLeft_toRightOf="@+id/rock_image"
                    app:layout_constraintTop_toBottomOf="@id/achievements_text"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/contact_text"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingTop="12dp"
                    android:text="@string/contact_text"
                    android:textColor="#000"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/project_image"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/mobile_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_awesome"
                    android:paddingStart="16dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/mobile_icon"
                    android:textColor="#000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contact_text"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/mobile_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:paddingStart="6dp"
                    android:text="@string/mobile_text"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toRightOf="@id/mobile_icon"
                    app:layout_constraintTop_toTopOf="@id/mobile_icon"
                    app:layout_constraintBottom_toBottomOf="@id/mobile_icon"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/email_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_awesome"
                    android:paddingStart="16dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/email_icon"
                    android:textColor="#000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mobile_icon"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:text="@string/email_text"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toRightOf="@id/email_icon"
                    app:layout_constraintTop_toTopOf="@id/email_icon"
                    app:layout_constraintBottom_toBottomOf="@id/email_icon"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/vk_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_awesome"
                    android:paddingStart="16dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/vk_icon"
                    android:textColor="#000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_icon"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/vk_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:text="@string/vk_text"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toRightOf="@id/vk_icon"
                    app:layout_constraintTop_toTopOf="@id/vk_icon"
                    app:layout_constraintBottom_toBottomOf="@id/vk_icon"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/about_next_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/about_next_text"
                    android:textSize="12sp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vk_icon" />


            </androidx.constraintlayout.widget.ConstraintLayout>



        </FrameLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/like_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/like_button"
        android:textSize="24sp"
        android:background="@drawable/button_states"
        style="@style/button"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/message_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="12dp"
        android:text="@string/message_button"
        android:textSize="24sp"
        android:background="@drawable/button_states"
        style="@style/button"
        tools:ignore="RtlHardcoded" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>